fixed pseudoelements on mobile

--- a/app/scss/layout/_header_mobile.scss
+++ b/app/scss/layout/_header_mobile.scss
@@ -74,7 +74,8 @@
         a {
           color: $white;
           margin: 0;
-          padding: 20px;
+          padding: 1.5rem;
+          font-weight: bold;
           transition: all 0.3s ease;
 
           &:hover {
