--- a/app/scss/sections/_trusted.scss
+++ b/app/scss/sections/_trusted.scss
@@ -12,6 +12,7 @@
         justify-content: center;
         width: 100%;
         text-align: center;
+        position: relative;
 
         &:before,
         &:after {
@@ -27,6 +28,27 @@
         
         &:after {
             margin: auto  auto auto 1em; 
+        }
+
+        @include for-phone {
+            padding: 2rem 0;
+            &:before,
+            &:after {
+                margin: 0;
+                position: absolute;
+                height: 1px;
+                width: 70%;
+                
+                display: block;
+            }
+            &:after {
+                top: 0;
+                left: 0;
+            }
+            &:before {
+                bottom: 0;
+                right: 0;
+            }
         }
     }
 }
